# deep_roboy_contol

./: README.md  requirements.txt
rl_agent/examples/: 1_ppo_example.py  2_ppo_multiprocessing.py  Untitled.ipynb
rl_agent/examples/tensorboard_log/PPO1_1/: events.out.tfevents.1548633306.ubuntu
scripts/: setup_google_instance_and_reboot.sh  setup_tensorflowgpu_and_reboot.sh
simple_robot_state_subscriber/: README.md  package.xml  setup.cfg  setup.py  subscriber.py
tests/rl_agent/api_tests/: test_prediction.py  test_save_and_load.py
