<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>simple_robot_state_subscriber</name>
  <version>0.0.0</version>
  <description>Examples of CARDSFlow subscribers using rclpy.</description>
  <maintainer email="unicorn@roboy.org">Alona Kharchenko</maintainer>
  <license>BSD-3</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>roboy_communication_simulation<depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
